--- a/Sidewards Galaga thing/Assembly-CSharp.csproj
+++ b/Sidewards Galaga thing/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\ExplodeBehaviour.cs" />
     <Compile Include="Assets\KamiKazeBehaviour.cs" />
     <Compile Include="Assets\MenuManager.cs" />
+    <Compile Include="Assets\PlayerHealth.cs" />
     <Compile Include="Assets\Scripts\EnemyController.cs" />
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\WallController.cs" />
